<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--
       A list of all previously viewed albums. These are populated in
       UiController.createController() right now.
     -->

    <!--
     Album, album will be shown here. Much later in the page will the rest be shown
    -->


    <!-- Actions that can be taken upon this album. -->
    <group android:checkableBehavior="single"
        android:id="@+id/actions_menu">
        <!--
          Slideshow start/stop icon
        -->
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_play"
            android:title="@string/slideshow"
            android:menuCategory="secondary" />

        <!--
          Options menu.
        -->
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/tools"
            android:menuCategory="secondary" />
        <!--
         Show the import icon the last because most people will just click
         on a link directly.
        -->
        <item
            android:id="@+id/nav_import"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/import_gallery"
            android:menuCategory="secondary"/>
        <!--
         Show the import icon the last because most people will just click
         on a link directly.
        -->
        <item
            android:id="@+id/nav_timer"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/timer"
            android:menuCategory="secondary"/>
    </group>

</menu>
